--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,7 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+/Users/trucho/Documents/UCI/project1_UCI/config.py
+/Users/trucho/Documents/UCI/project1_UCI/config.py
+
